--- a/thanks.html
+++ b/thanks.html
@@ -3,6 +3,58 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <!-- Primary SEO -->
+  <title>System & Flow — Project Management. Simplified.</title>
+  <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <link rel="canonical" href="https://systemnflow.com/" />
+  <meta name="robots" content="index,follow" />
+  <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="System & Flow — Project Management. Simplified." />
+  <meta property="og:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <meta property="og:url" content="https://systemnflow.com/" />
+  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta property="og:site_name" content="System & Flow" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
+  <meta name="twitter:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
+
+  <!-- JSON‑LD (Organization) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "System & Flow",
+    "url": "https://systemnflow.com/",
+    "logo": "https://systemnflow.com/logo.png",
+    "sameAs": [
+      "https://www.instagram.com/systemnflow",
+      "https://www.tiktok.com/@systemnflow",
+      "https://www.linkedin.com/company/system-n-flow"
+    ]
+  }
+  </script>
+
+  <!-- Performance hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="preload" href="/styles.css" as="style" />
+
+  <!-- Styles & Favicon -->
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="/favicon.ico" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWGX418"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-1FRFWGX418');
+  </script>
   <title>Thanks — You’re on the list! | System & Flow</title>
   <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
   <link rel="stylesheet" href="/styles.css" />
