--- a/404.html
+++ b/404.html
@@ -48,12 +48,12 @@
   <link rel="icon" href="/favicon.ico" />
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWGX418"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-1FRFWGX418');
+    gtag('config', 'G-1FRFWG4X18');
   </script>
   <title>Page Not Found — System &amp; Flow</title>
   <meta name="description" content="The page you were looking for doesn’t exist. You’re still in the right place for PM tools that feel simple." />
