--- a/apps.html
+++ b/apps.html
@@ -49,12 +49,12 @@
   <link rel="icon" href="/favicon.ico" />
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWGX418"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-1FRFWGX418');
+    gtag('config', 'G-1FRFWG4X18');
   </script>
   <title>Apps — System & Flow</title>
   <meta name="description" content="System & Flow mini‑apps for project managers." />
