--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
   <link rel="icon" href="/favicon.ico" />
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWGX418"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-1FRFWGX418');
+    gtag('config', 'G-1FRFWG4X18');
   </script>
   <title>System & Flow — Project Management. Simplified.</title>
   <meta name="description" content="System & Flow builds toolkits, templates, and mini-apps that make project management easier, faster, and smarter." />
