--- a/thanks.html
+++ b/thanks.html
@@ -48,12 +48,12 @@
   <link rel="icon" href="/favicon.ico" />
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWGX418"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-1FRFWGX418');
+    gtag('config', 'G-1FRFWG4X18');
   </script>
   <title>Thanks — You’re on the list! | System & Flow</title>
   <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
