--- a/thanks.html
+++ b/thanks.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <!-- Primary SEO -->
-  <title>System & Flow — Project Management. Simplified.</title>
-  <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <link rel="canonical" href="https://systemnflow.com/" />
+
+  <!-- Primary SEO -->
+  <title>Thanks — You’re on the list! | System & Flow</title>
+  <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
+  <link rel="canonical" href="https://systemnflow.com/thanks.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="System & Flow — Project Management. Simplified." />
-  <meta property="og:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <meta property="og:url" content="https://systemnflow.com/" />
+  <meta property="og:title" content="Thanks — You’re on the list! | System & Flow" />
+  <meta property="og:description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
+  <meta property="og:url" content="https://systemnflow.com/thanks.html" />
   <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
-  <meta name="twitter:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <meta name="twitter:title" content="Thanks — You’re on the list! | System & Flow" />
+  <meta name="twitter:description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
   <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
 
   <!-- JSON‑LD (Organization) -->
@@ -55,10 +56,7 @@
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-  <title>Thanks — You’re on the list! | System & Flow</title>
-  <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+
   <style>
     .t-wrap { max-width: 820px; margin: 0 auto; padding: 70px 20px 40px; text-align:center; }
     .t-badge { display:inline-flex; align-items:center; justify-content:center; width:70px; height:70px; border-radius:50%; background:#0f1f14; border:1px solid #1f5d38; color:#c9f1dc; font-size:30px; }
@@ -102,5 +100,14 @@
 
   <div data-include="/partials/footer.html"></div>
   <script src="/include.js" defer></script>
+
+  <!-- Fire the signup event when this page loads -->
+  <script>
+    // This will appear in GA4 as event name: newsletter_signup
+    gtag('event', 'newsletter_signup', {
+      method: 'Formspree',
+      page_location: location.href
+    });
+  </script>
 </body>
 </html>
