--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="canonical" href="https://systemnflow.com/" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
+  <meta name="google-site-verification" content="0ymp-CLDEvtP7eEedX-2OpObweOUFgGrU8-_ZMqKaVo" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
