--- a/apps.html
+++ b/apps.html
@@ -4,39 +4,42 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <!-- Primary SEO -->
-  <title>System & Flow — Project Management. Simplified.</title>
-  <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <link rel="canonical" href="https://systemnflow.com/" />
+  <!-- Primary SEO -->
+  <title>Project Management Tools & Templates | System & Flow</title>
+  <meta name="description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter. Built for PMs who want clarity and flow." />
+  <link rel="canonical" href="https://systemnflow.com/apps.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="System & Flow — Project Management. Simplified." />
-  <meta property="og:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <meta property="og:url" content="https://systemnflow.com/" />
+  <meta property="og:title" content="Project Management Tools & Templates | System & Flow" />
+  <meta property="og:description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter." />
+  <meta property="og:url" content="https://systemnflow.com/apps.html" />
   <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
-  <meta name="twitter:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <meta name="twitter:title" content="Project Management Tools & Templates | System & Flow" />
+  <meta name="twitter:description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter." />
   <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
 
-  <!-- JSON‑LD (Organization) -->
+  <!-- JSON‑LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "System & Flow",
-    "url": "https://systemnflow.com/",
-    "logo": "https://systemnflow.com/logo.png",
-    "sameAs": [
-      "https://www.instagram.com/systemnflow",
-      "https://www.tiktok.com/@systemnflow",
-      "https://www.linkedin.com/company/systemnflow"
-    ]
+    "@type": "WebPage",
+    "name": "Project Management Tools & Templates | System & Flow",
+    "url": "https://systemnflow.com/apps.html",
+    "about": {
+      "@type": "Thing",
+      "name": "Project management tools, templates, and mini-apps"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "System & Flow",
+      "url": "https://systemnflow.com/"
+    }
   }
   </script>
 
@@ -52,28 +55,24 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-  <title>Apps — System & Flow</title>
-  <meta name="description" content="System & Flow mini‑apps for project managers." />
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
 
   <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
-      <a href="/index.html">
+      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
         <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <span class="brand-name">System &amp; Flow</span>
       </a>
-      <span class="brand-name">System &amp; Flow</span>
     </div>
     <nav class="nav">
-      <a href="/index.html">Home</a>
-      <a href="/apps.html">Apps</a>
+      <a href="/">Home</a>
+      <a href="/apps.html" aria-current="page">Apps</a>
       <a href="/contact.html">Contact</a>
     </nav>
   </header>
@@ -90,10 +89,10 @@
     <div class="card">
       <div class="card-icon">📄</div>
       <h3>Transcript Analyzer (Free)</h3>
-      <p>Extract Actions, Risks, Decisions from meeting notes in seconds.</p>
+      <p>Extract Actions, Risks, and Decisions from meeting notes in seconds.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#">Open</a>
-        <a class="btn ghost" href="#">Docs</a>
+        <a class="btn primary" href="#" rel="nofollow">Open</a>
+        <a class="btn ghost" href="#" rel="nofollow">Docs</a>
       </div>
     </div>
 
@@ -103,8 +102,8 @@
       <h3>Status Report Generator</h3>
       <p>One‑page executive summaries with exports to PDF/Markdown.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#">Open</a>
-        <a class="btn ghost" href="#">Learn More</a>
+        <a class="btn primary" href="#" rel="nofollow">Open</a>
+        <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
       </div>
     </div>
 
@@ -114,8 +113,8 @@
       <h3>Risk Radar</h3>
       <p>Auto‑surface top risks with suggested mitigations.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#">Open</a>
-        <a class="btn ghost" href="#">Learn More</a>
+        <a class="btn primary" href="#" rel="nofollow">Open</a>
+        <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
       </div>
     </div>
 
@@ -125,8 +124,8 @@
       <h3>Report Mapper</h3>
       <p>Upload any template; get a fill‑guide mapped to your data.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#">Open</a>
-        <a class="btn ghost" href="#">Learn More</a>
+        <a class="btn primary" href="#" rel="nofollow">Open</a>
+        <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
       </div>
     </div>
   </section>
