--- a/apps.html
+++ b/apps.html
@@ -5,35 +5,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- Primary SEO -->
-  <title>Project Management Tools & Templates | System & Flow</title>
-  <meta name="description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter. Built for PMs who want clarity and flow." />
+  <title>Project Management SaaS Apps & AI Prompts | System & Flow</title>
+  <meta name="description" content="Lightweight SaaS apps and AI prompts — built by project managers, for project managers. Save hours, cut through noise, and focus on execution." />
   <link rel="canonical" href="https://systemnflow.com/apps.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Project Management Tools & Templates | System & Flow" />
-  <meta property="og:description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter." />
+  <meta property="og:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
+  <meta property="og:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta property="og:url" content="https://systemnflow.com/apps.html" />
   <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Project Management Tools & Templates | System & Flow" />
-  <meta name="twitter:description" content="Explore toolkits, templates, and mini‑apps that make project management faster, easier, and smarter." />
+  <meta name="twitter:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
+  <meta name="twitter:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
 
-  <!-- JSON‑LD -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Project Management Tools & Templates | System & Flow",
+    "name": "Project Management SaaS Apps & AI Prompts | System & Flow",
     "url": "https://systemnflow.com/apps.html",
     "about": {
       "@type": "Thing",
-      "name": "Project management tools, templates, and mini-apps"
+      "name": "Project management SaaS apps and AI prompt packs"
     },
     "isPartOf": {
       "@type": "WebSite",
@@ -79,8 +79,8 @@
 
   <!-- Page intro -->
   <main class="wrap hero" style="padding:60px 20px 14px">
-    <h1>Apps</h1>
-    <p class="sub">Start with the free Analyzer, then upgrade when you’re ready.</p>
+    <h1>SaaS Apps & AI Prompts</h1>
+    <p class="sub">Built by project managers, for project managers. Start with the free Analyzer, then explore premium apps and prompt packs.</p>
   </main>
 
   <!-- App cards -->
@@ -89,7 +89,7 @@
     <div class="card">
       <div class="card-icon">📄</div>
       <h3>Transcript Analyzer (Free)</h3>
-      <p>Extract Actions, Risks, and Decisions from meeting notes in seconds.</p>
+      <p>Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
       <div class="card-actions">
         <a class="btn primary" href="#" rel="nofollow">Open</a>
         <a class="btn ghost" href="#" rel="nofollow">Docs</a>
@@ -100,7 +100,7 @@
     <div class="card">
       <div class="card-icon">📑</div>
       <h3>Status Report Generator</h3>
-      <p>One‑page executive summaries with exports to PDF/Markdown.</p>
+      <p>Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
       <div class="card-actions">
         <a class="btn primary" href="#" rel="nofollow">Open</a>
         <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
@@ -111,21 +111,21 @@
     <div class="card">
       <div class="card-icon">⚠️</div>
       <h3>Risk Radar</h3>
-      <p>Auto‑surface top risks with suggested mitigations.</p>
+      <p>Automatically flag top project risks — complete with <strong>AI-suggested mitigations</strong>.</p>
       <div class="card-actions">
         <a class="btn primary" href="#" rel="nofollow">Open</a>
         <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
       </div>
     </div>
 
-    <!-- 4) Report Mapper -->
+    <!-- 4) AI Prompt Pack -->
     <div class="card">
-      <div class="card-icon">✳️</div>
-      <h3>Report Mapper</h3>
-      <p>Upload any template; get a fill‑guide mapped to your data.</p>
+      <div class="card-icon">🤖</div>
+      <h3>AI Prompt Pack for PMs</h3>
+      <p>50+ prompts crafted by PMs to supercharge <strong>planning, reporting, and team alignment</strong>.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#" rel="nofollow">Open</a>
-        <a class="btn ghost" href="#" rel="nofollow">Learn More</a>
+        <a class="btn primary" href="#" rel="nofollow">Preview</a>
+        <a class="btn ghost" href="/contact.html">Get Updates</a>
       </div>
     </div>
   </section>
