--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- Primary SEO -->
-  <title>Contact System & Flow | Project Management Made Simple</title>
-  <meta name="description" content="Get in touch with System & Flow. Questions about toolkits, templates, or mini‑apps? We’re here to help you simplify project management." />
+  <title>Contact System & Flow | Built by PMs, for PMs</title>
+  <meta name="description" content="Questions about our PM SaaS apps or AI prompts? Contact System & Flow — built by project managers, for project managers." />
   <link rel="canonical" href="https://systemnflow.com/contact.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Contact System & Flow | Project Management Made Simple" />
-  <meta property="og:description" content="Get in touch with System & Flow. Questions about toolkits, templates, or mini‑apps? We’re here to help you simplify project management." />
+  <meta property="og:title" content="Contact System & Flow | Built by PMs, for PMs" />
+  <meta property="og:description" content="Get in touch about lightweight PM SaaS apps and AI prompts that cut through chaos and make execution simple." />
   <meta property="og:url" content="https://systemnflow.com/contact.html" />
   <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Contact System & Flow | Project Management Made Simple" />
-  <meta name="twitter:description" content="Get in touch with System & Flow. Questions about toolkits, templates, or mini‑apps? We’re here to help you simplify project management." />
+  <meta name="twitter:title" content="Contact System & Flow | Built by PMs, for PMs" />
+  <meta name="twitter:description" content="Get in touch about lightweight PM SaaS apps and AI prompts that cut through chaos and make execution simple." />
   <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
 
   <!-- JSON‑LD (ContactPage) -->
@@ -93,7 +93,10 @@
   <!-- Intro -->
   <main id="main" class="wrap hero" style="padding:60px 20px 14px">
     <h1>Contact / Join the List</h1>
-    <p class="sub">Get launch news, specials, and coupons. Opt out anytime.</p>
+    <p class="sub">
+      Built <strong>by project managers, for project managers.</strong>
+      Ask us about SaaS app access, AI prompts, or early launch updates.
+    </p>
   </main>
 
   <!-- Form -->
@@ -108,18 +111,18 @@
       </label>
 
       <label for="message">Message
-        <textarea id="message" name="message" rows="5" required></textarea>
+        <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
       </label>
 
       <label class="consent">
         <input type="checkbox" name="marketing_consent" />
-        I agree to receive follow‑ups about this inquiry.
+        I agree to receive follow‑ups about this inquiry and occasional product updates.
       </label>
 
       <!-- Anti-bot honeypot -->
       <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
-      <!-- Optional metadata (no redirect; we’ll show inline success) -->
+      <!-- Optional metadata (no redirect; show inline success) -->
       <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
 
       <button class="btn primary" type="submit">Send</button>
@@ -150,8 +153,7 @@
         if (resp.ok) {
           form.style.display = "none";
           document.getElementById("contact-success").style.display = "block";
-
-          // Optional: fire a GA event for contact messages (simple)
+          // GA event for tracking
           if (typeof gtag === 'function') {
             gtag('event', 'contact_submit', { method: 'Formspree' });
           }
