--- a/contact.html
+++ b/contact.html
@@ -129,8 +129,13 @@
     </form>
 
     <div id="contact-success" class="success">
-      ✅ Thanks for reaching out! We’ll reply soon.
-    </div>
+  ✅ Thanks for reaching out! We’ll reply soon.
+  <div style="margin-top:10px">
+    Want a head start? Grab the <strong>free AI Intro for PMs</strong> →
+    <a class="btn" href="/ai-intro.html" style="margin-left:6px">Open AI Intro</a>
+  </div>
+</div>
+
   </section>
 
   <!-- Footer -->
